kleine Änderungen, z.B: SpielGUI private gemacht oder ein Attribut in Spieler final ungenutzte lokale Variablen in Spieler und SpielerModel gelöscht